服务统计接口
